# modul-kecerdasan-buatan

./: .gitignore  README.md  pyproject.toml
Modul_2/: modul_2.ipynb  modul_2_2024.ipynb  modul_2_2ndver.ipynb
Modul_3/: Data Visualization and Preprocessing.ipynb  Modul 3 - Data Visualization and Preprocessing.ipynb  Modul 3_v2.ipynb  Modul_3_2024.ipynb  Modul_3_v2.ipynb
Modul_3/.ipynb_checkpoints/: Modul 3 - Data Visualization and Preprocessing-checkpoint.ipynb  Modul_3_v2-checkpoint.ipynb
Modul_4/: Modul 4 - Supervised Learning.ipynb  Modul_4_2024.ipynb  Modul_4_Supervised_Learning.ipynb
Modul_4/.ipynb_checkpoints/: Modul_4_Supervised_Learning-checkpoint.ipynb
Modul_5/: Modul_5_2024.ipynb  Modul_5_Unsupervised_Learning.ipynb  Modul_5_old.ipynb  Modul_5_v2.ipynb
Modul_6/: Hands_On_Image_Classification.ipynb  Modul_6_2024.ipynb  Modul_6_Neural Network.ipynb  temp.ipynb
Modul_6/.ipynb_checkpoints/: Modul_6_Neural Network-checkpoint.ipynb
introduction/: README.md
modul-0/: Modul_0.ipynb
modul-0/dataset/: desktop.ini  income.data.csv  storedata.csv
modul-1/: Modul_1.ipynb  README.md
modul-1/code/: ensemble.ipynb  klasifikasi.ipynb  regresi.ipynb
modul-2/: Modul_3.ipynb  README.md
modul-2/code/: klasifikasi.ipynb  regresi.ipynb
modul-3/: Modul_3.ipynb  README.md
modul-3/images/: howdoespcawork.avif
modul-4/: README.md
modul-5/: 01-dasar-transformers-dan-llm.md  01-transformers.md  02-reasoning-dan-long-context.md  03-multimodal-dan-rag.md  04-evaluasi-dan-metrik.md  readme.md
modul-6/: README.md
modul_1/: README.md  modul_1.md
(+7 files in other folders)
