[project]
name = "modul-kecerdasan-buatan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "torch>=2.6.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn>=0.24.0",
    "nltk>=3.8.1",
    "Pillow>=9.0.0",
    "opencv-python>=4.5.0",
    "feature-engine>=1.5.0",
    "imutils>=0.5.4"
]
